--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "three": "^0.121.1",
